--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
         }
         
         .btn.active {
-            background: #dc143c;
-            border-color: #dc143c;
+            background: rgba(255, 255, 255, 0.4);
         }
         
         .icon {
