Add Google Fonts and update font families

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Departures - Train Station Board</title>
+     <!-- Add Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
     <style>
         * {
             margin: 0;
@@ -12,7 +17,7 @@
         }
         
         body {
-            font-family: 'DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: 'Barlow','Bahnschrift','DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             background: #000050;
             min-height: 100vh;
             color: white;
@@ -56,7 +61,7 @@
         }
         
         .station-search-input {
-            font-family: 'DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: 'Barlow','Bahnschrift','DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             font-size: 3rem;
             font-weight: 300;
             letter-spacing: 1px;
